--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "gatsby-plugin-typography": "^2.5.4",
     "gatsby-remark-copy-linked-files": "^2.3.5",
     "gatsby-remark-images": "^3.3.10",
+    "gatsby-remark-katex": "^3.3.4",
     "gatsby-remark-prismjs": "^3.5.4",
     "gatsby-remark-responsive-iframe": "^2.4.5",
     "gatsby-remark-smartypants": "^2.3.4",
     "gatsby-source-filesystem": "^2.3.11",
-    "gatsby-transformer-remark": "^2.8.15",
+    "gatsby-transformer-remark": "^2.8.17",
     "gatsby-transformer-sharp": "^2.5.5",
+    "katex": "^0.11.1",
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
